@@ -7,6 +7,7 @@ Support No Local Dir in Hbase 0.98.3
 Support various older Spark versions, 0.9.2, 1.2.1, 1.2.2, 1.3.1, 1.4.0.
 Support various older Pig versions, 0.13.0.
 Support various older Hadoop versions, 2.4.1, 2.5.0, 2.5.1, 2.5.2, 2.6.1, 2.7.0.
+Support various older Zookeeper versions, 3.4.0, 3.4.1, 3.4.2, 3.4.3, 3.4.4.
 Fix corner case in spark word count w/ rawnetworkfs
 
 magpie 1.61
